ffi/poc/codec/crates/ak-abi/src/lib.rs


/// An opaque handle; the host holds a pointer and never looks inside.
pub enum ak_runtime {}
/// An opaque handle; the host holds a pointer and never looks inside.
pub enum ak_client {}
/// An opaque handle; the host holds a pointer and never looks inside.
pub enum ak_call {}
/// An opaque handle; the host holds a pointer and never looks inside.
pub enum ak_queue {}

/// A byte range the core owns until the host releases it with `ak_bytes_free`.
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_bytes {
    pub ptr: *const u8,
    pub len: usize,
    /// The core's handle on the allocation. The host passes it back and does not read it.
    pub owner: *mut c_void,
}

impl Default for ak_bytes {
    fn default() -> Self {
        ak_bytes {
            ptr: ::core::ptr::null(),
            len: 0,
            owner: ::core::ptr::null_mut(),
        }
    }
}

/// What a completion carries. Released with `ak_bytes_free`, as the blocking delivery's bytes are, so a host has one release path whichever delivery it takes.
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_completion {
    pub tag: u64,
    pub status: i32,
    pub bytes: ak_bytes,
}

impl Default for ak_completion {
    fn default() -> Self {
        ak_completion {
            tag: 0,
            status: 0,
            bytes: ak_bytes::default(),
        }
    }
}

/// The transport settings ArmoniK pins. The stream and the connection window are separate settings on tonic/hyper, so both are here. Zero means "the stack's".
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_client_opts {
    /// SETTINGS_INITIAL_WINDOW_SIZE per stream; 0 = default. ArmoniK: 4 MiB.
    pub stream_window: u32,
    /// The connection-level window, a SEPARATE setting; 0 = default.
    pub connection_window: u32,
    /// 1 on, 0 off, -1 default (off). Overrides both windows when on.
    pub adaptive_window: i32,
    /// Largest message accepted, bytes; 0 = default.
    pub max_recv_message: u32,
    /// Largest message sent, bytes; 0 = default.
    pub max_send_message: u32,
    /// ArmoniK's tcp_nagle_algorithm: 1 Nagle on, 0 off, -1 default. ArmoniK ships it OFF.
    pub tcp_nagle: i32,
}

impl Default for ak_client_opts {
    fn default() -> Self {
        ak_client_opts {
            stream_window: 0,
            connection_window: 0,
            adaptive_window: 0,
            max_recv_message: 0,
            max_send_message: 0,
            tcp_nagle: 0,
        }
    }
}

/// Called ONCE per call, on a thread the core owns.
pub type ak_completion_cb = extern "C" fn(user_data: *mut c_void, comp: *mut ak_completion);

/// `ak_queue_next` returned a completion.
pub const AK_QUEUE_OK: i32 = 0;
/// The timeout expired with no completion. Not an error.
pub const AK_QUEUE_TIMEOUT: i32 = 1;
/// The queue is shutting down and is drained.
pub const AK_QUEUE_SHUTDOWN: i32 = 2;

/// RPC boundary-call counts (counting build).
#[repr(C)]
#[derive(Clone, Copy, Default, Debug, PartialEq, Eq)]
pub struct ak_rpc_counters {
    pub forward: u64,
    pub reverse: u64,
}

unsafe extern "C" {
    pub fn ak_runtime_new(worker_threads: u32) -> *mut ak_runtime;
    pub fn ak_runtime_destroy(r: *mut ak_runtime);
    pub fn ak_client_new(r: *mut ak_runtime, uri: *const u8, uri_len: usize) -> *mut ak_client;
    /// A client with the transport pinned. NULL options = `ak_client_new`.
    pub fn ak_client_new_opts(r: *mut ak_runtime, uri: *const u8, uri_len: usize, opts: *const ak_client_opts) -> *mut ak_client;
    pub fn ak_client_destroy(c: *mut ak_client);
    /// Blocking delivery: one crossing in, `ak_bytes_free` the only other.
    pub fn ak_call_unary(c: *mut ak_client, path: *const u8, path_len: usize, req: *const u8, req_len: usize, out: *mut ak_bytes) -> i32;
    pub fn ak_bytes_free(b: *mut ak_bytes);
    /// Callback delivery: 2 forward crossings and 1 reverse.
    pub fn ak_call_unary_cb(c: *mut ak_client, path: *const u8, path_len: usize, req: *const u8, req_len: usize, cb: ak_completion_cb, user_data: *mut c_void, tag: u64) -> *mut ak_call;
    /// Completion-queue delivery: no upcall. 3 forward crossings and 0 reverse.
    pub fn ak_call_unary_q(c: *mut ak_client, path: *const u8, path_len: usize, req: *const u8, req_len: usize, q: *mut ak_queue, tag: u64) -> *mut ak_call;
    pub fn ak_queue_new() -> *mut ak_queue;
    /// Wait up to `timeout_ms` for one completion. R-G5: `u64`, as the core defines it.
    pub fn ak_queue_next(q: *mut ak_queue, out: *mut ak_completion, timeout_ms: u64) -> i32;
    pub fn ak_queue_shutdown(q: *mut ak_queue);
    pub fn ak_queue_destroy(q: *mut ak_queue);
    pub fn ak_call_cancel(h: *mut ak_call);
    pub fn ak_call_destroy(h: *mut ak_call);
    /// 1 if this core counts RPC crossings.
    pub fn ak_rpc_counting() -> i32;
    pub fn ak_rpc_counters(out: *mut ak_rpc_counters);
    pub fn ak_rpc_counters_reset();
}
// @generated-end plan.rpc
